# Exp

./: .gitignore  package-lock.json  package.json
examples/example1/: client.py  pyproject.toml  server.py
examples/example2/: client.ts  package-lock.json  package.json  server.ts
examples/example3/: chumma.py  client.js  client.ts  pyproject.toml  server.py
examples/example4/: client.py  package.json  pyproject.toml  server.ts  tsconfig.json
scripts/py/: build.js
scripts/ts/: build.js
sdks/python/: README.md  log.txt  pyproject.toml
sdks/python/examples/example1/: client.py  log.txt  server.py
sdks/python/src/exp/: types.py
sdks/python/src/exp/exporter/: __init__.py  session.py  stdio.py
sdks/python/src/exp/exporter/highlevel/: exceptions.py  server.py
sdks/python/src/exp/exporter/highlevel/functions/: __init__.py  base.py  function_manager.py
sdks/python/src/exp/exporter/highlevel/utilities/: context_injection.py  func_metadata.py  logging.py  types.py
sdks/python/src/exp/exporter/lowlevel/: server.py
sdks/python/src/exp/importer/: __init__.py  client.py  session.py  stdio.py
sdks/python/src/exp/os/posix/: utilities.py
sdks/python/src/exp/os/win32/: utilities.py
sdks/python/src/exp/shared/: exceptions.py  message.py  session.py
sdks/typescript/: package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: demo.js  index.ts  types.ts
sdks/typescript/src/exporter/: index.ts  stdio.ts
sdks/typescript/src/importer/: index.ts  stdio.ts
sdks/typescript/src/shared/: protocol.ts  stdio.ts  transport.ts
(+9 files in other folders)
